v. 1.41 gap fixes

--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -6,11 +6,6 @@
     min-width: min-content;
 }
 
-@media screen and (max-width: 1030px){
-    .place__text{
-        flex-basis: 43vw;
-    }
-}
 
 @media screen and (max-width: 620px){
     .place__text{
